updated sponsors page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
         <li><a class="slideout-list-items" href="#">Forum</a></li> -->
         <li><a class="slideout-list-items" href="store.html">Store</a></li>
+        <li><a class="slideout-list-items" href="https://sectorsixapparel.com/collections/hydracore-gaming"
+            target="_blank">Pro Store</a></li>
       </ul>
       <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
     </div>
@@ -51,35 +53,57 @@
         <div class="grid__col--12">
           <div class="card">
             <h2 class="headline--primary white">News</h2>
-              <ul class="rslides">
-                <li>
-                  <p class="white">HydraCore Gaming is pleased to announce it's legendary partnership with Sector Six Apparel! This has allowed HCG exclusive access to discount codes for all fans and players to buy HCG products at a discounted rate and to introduce incentives for HCG given future successes!</p>
-                  <a href="https://sectorsixapparel.com/collections/hydracore-gaming" target="_blank"><img class="news--large" src="images/pro-store-banner.png"></a>
-                  <a href="https://sectorsixapparel.com/collections/hydracore-gaming" target="_blank"><img class="news--mobile" src="images/jersey-merch.png"></a>
-                  <p class="white">Sector Six Apparel is a leading apparel company in the eSports community and produces only the highest quality eSports-line of clothing and accessories and distributes for well-known teams like Polar Ace, Space Station Gaming and many more!</p>
-                  <p class="white">Go check out our new pro shop using the link on our sponsor page and enter our discount code at checkout to receive a 5 percent discount on all HCG items!</p>
-                </li>
-                <li>
-                  <a href="smash.html"><img class="news--large" src="images/smash-art.jpg"></a>
-                  <a href="smash.html"><img class="news--mobile" src="images/smash-art-mobile.jpg"></a>
-                  <p class="white">Team Smash Ultimate [Playz and Kerchak] participated in the largest Smash Ultimate tournament in the Southeast and placed highly within a large pool of amazing players.</p>
-                  <p class="white">Unfortunately Kerchak was not able to compete and was DQ in the initial stages of the pool but Playz placed 27th/170 players, defeating pro players and tough adversaries on his journey to the top of the player board!</p>
-                  <p class="white">Playz and Kerchak are expected to take control of the Southeast Smash Ultimate scene and go pro in the very near future, and we can only say we are glad to have them on our roster wearing the HCG name proudly while they sweep through the competition in this rapidly rising eSports game! Great job guys!</p>
-                </li>
-                <li class="white">
-                  <p class="white">Interested in joining HydraCore Gaming? Do you feel that you have a particular set of skills you want to unleash in the competitive scene?</p>
-                  <p class="white">Feel free to shoot us an email application and an admin should be in contact with you within 24 hours.</p>
-                  <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--large" src="images/join-banner.png"></a>
-                  <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--mobile" src="images/main-logo.png"></a>
-                  <p class="white">If you are having difficulty reaching an admin please feel free to join the discord using the link on the homepage and message an admin directly from there. Please do not directly go through Discord to submit an application as our admins will check to ensure you did indeed submit through the website.</p>
-                </li>
-                <li class="white">
-                  <p class="white">Are you interested in getting some chill time in with our members? Are you wanting to get some casual play time in with our players?</p>
-                  <a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="news--large" src="images/join-community-banner.png"></a>
-                  <a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="news--mobile" src="images/discord-logo.png"></a>
-                  <p class="white">Feel free to join our discord using the link at the home page under "contact us" and come give us a shout!</p>
-                </li>
-              </ul>
+            <ul class="rslides">
+              <li>
+                <p class="white">HydraCore Gaming is pleased to announce it's legendary partnership with Sector Six
+                  Apparel! This has allowed HCG exclusive access to discount codes for all fans and players to buy HCG
+                  products at a discounted rate and to introduce incentives for HCG given future successes!</p>
+                <a href="https://sectorsixapparel.com/collections/hydracore-gaming" target="_blank"><img
+                    class="news--large" src="images/pro-store-banner.png"></a>
+                <a href="https://sectorsixapparel.com/collections/hydracore-gaming" target="_blank"><img
+                    class="news--mobile" src="images/jersey-merch.png"></a>
+                <p class="white">Sector Six Apparel is a leading apparel company in the eSports community and produces
+                  only the highest quality eSports-line of clothing and accessories and distributes for well-known teams
+                  like Polar Ace, Space Station Gaming and many more!</p>
+                <p class="white">Go check out our new pro shop using the link on our sponsor page and enter our discount
+                  code at checkout to receive a 5 percent discount on all HCG items!</p>
+              </li>
+              <li>
+                <a href="smash.html"><img class="news--large" src="images/smash-art.jpg"></a>
+                <a href="smash.html"><img class="news--mobile" src="images/smash-art-mobile.jpg"></a>
+                <p class="white">Team Smash Ultimate [Playz and Kerchak] participated in the largest Smash Ultimate
+                  tournament in the Southeast and placed highly within a large pool of amazing players.</p>
+                <p class="white">Unfortunately Kerchak was not able to compete and was DQ in the initial stages of the
+                  pool but Playz placed 27th/170 players, defeating pro players and tough adversaries on his journey to
+                  the top of the player board!</p>
+                <p class="white">Playz and Kerchak are expected to take control of the Southeast Smash Ultimate scene
+                  and go pro in the very near future, and we can only say we are glad to have them on our roster wearing
+                  the HCG name proudly while they sweep through the competition in this rapidly rising eSports game!
+                  Great job guys!</p>
+              </li>
+              <li class="white">
+                <p class="white">Interested in joining HydraCore Gaming? Do you feel that you have a particular set of
+                  skills you want to unleash in the competitive scene?</p>
+                <p class="white">Feel free to shoot us an email application and an admin should be in contact with you
+                  within 24 hours.</p>
+                <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--large" src="images/join-banner.png"></a>
+                <a href="mailto:HydraCoreGaming@gmail.com"><img class="news--mobile" src="images/main-logo.png"></a>
+                <p class="white">If you are having difficulty reaching an admin please feel free to join the discord
+                  using the link on the homepage and message an admin directly from there. Please do not directly go
+                  through Discord to submit an application as our admins will check to ensure you did indeed submit
+                  through the website.</p>
+              </li>
+              <li class="white">
+                <p class="white">Are you interested in getting some chill time in with our members? Are you wanting to
+                  get some casual play time in with our players?</p>
+                <a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="news--large"
+                    src="images/join-community-banner.png"></a>
+                <a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="news--mobile"
+                    src="images/discord-logo.png"></a>
+                <p class="white">Feel free to join our discord using the link at the home page under "contact us" and
+                  come give us a shout!</p>
+              </li>
+            </ul>
 
           </div>
         </div>
