--- a/smash.html
+++ b/smash.html
@@ -31,6 +31,8 @@
                 <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
                 <li><a class="slideout-list-items" href="#">Forum</a></li> -->
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
+                <li><a class="slideout-list-items" href="https://sectorsixapparel.com/collections/hydracore-gaming"
+                        target="_blank">Pro Store</a></li>
             </ul>
             <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
         </div>
@@ -45,7 +47,7 @@
         <div class="wrapper">
             <div class="grid__col--skills">
                 <div class="skills--card" id="myBtn">
-                    <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/placeholder.png"
+                    <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/playz.png"
                             alt="naga logo">
                         <h3 class="headline--tertiary">PlayZ.HCG</h3>
                     </a>
@@ -85,20 +87,26 @@
         <!-- Modal Content -->
 
         <div id="ex1" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
-            <p>Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder
-                text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text.
-                Placeholder text. </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <img class="modal-logo" src="images/main-logo.png">
+            <p>I'm a pretty chill and positive guy. I started playing smash 4 competitively and used Dk most of the
+                course of my career. As I move into ultimate, I stuck with Dk and hope to be known as the best Dk player
+                for Ultimate. I hope everyone can see how fun it is to watch me play as I am having fun playing.</p>
+            <ul class="contact-info">
+                <!-- <li><a href="https://www.twitter.com/zeekiwitv" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li> -->
+                <li><a href="https://www.twitch.tv/Playz_AF" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <!-- <li><a href="https://www.youtube.com/channel/UCkq9cgpLhQo-7wlFyGwkU_w" target="_blank"><img
+                            class="contact-icons" src="images/youtube-icon.png"></a></li> -->
+            </ul>
         </div>
 
-        <div id="ex2" class="modal">
+        <!-- <div id="ex2" class="modal">
             <img class="modal-logo" src="images/placeholder.png">
             <p>Benji.HCG is a hardcore siege player and devotes a minimum of 3 hours daily to play before he goes to
                 work as an aircraft mechanic for the US Air Force. He is a flex player but enjoys anchoring or support
                 play the most. I can see hydracore making it in pro league and dominating.
             </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex3" class="modal">
@@ -108,7 +116,6 @@
                 Strike and eventually onto Siege. Synergy has been a way for me to advance my skills both as a team mate
                 and a player. Can’t wait to see what this season has in store for us.
             </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex4" class="modal">
@@ -117,7 +124,6 @@
                 a good time, but when its time to get serious, I do it. My real name is Rudy (Scorpion). I also like to
                 learn new things, and expand my knowledge. I hope I get to meet you and have a fantastic rest of your
                 day!</p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex5" class="modal">
@@ -125,8 +131,7 @@
             <p>MrEagleEye.HCG Is a 21 year old Collision repairman and auto painter, Practices archery for fun and is a
                 proud
                 advocate to suicide prevention and help methods. A lifetime gamer, and a huge batman fan.</p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
-        </div>
+        </div> -->
 
 
 
