--- a/sponsors.html
+++ b/sponsors.html
@@ -31,6 +31,8 @@
                 <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
                 <li><a class="slideout-list-items" href="#">Forum</a></li> -->
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
+                <li><a class="slideout-list-items" href="https://sectorsixapparel.com/collections/hydracore-gaming"
+                        target="_blank">Pro Store</a></li>
             </ul>
             <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
         </div>
@@ -46,7 +48,7 @@
             <div class="grid__row" id="sponsors">
 
 
-                <h2 class="headline--secondary white">Sponsors</h2>
+                <h2 class="headline--secondary white">Sponsors and Partners</h2>
                 <div class="grid__col--proj">
                     <ul>
                         <li class="sponsors"><a href="#ex1" rel="modal:open"><img class="img--frame"
@@ -57,6 +59,14 @@
                                     src="images/HTC.svg" atl="HTC"></a></li>
                         <li class="sponsors"><a href="#ex4" rel="modal:open"><img class="img--frame"
                                     src="images/hidemyass.png" atl="HideMyAss VPN"></a></li>
+                        <li class="sponsors"><a href="#ex5" rel="modal:open"><img class="img--frame"
+                                    src="images/airvape.png" atl="airvape"></a></li>
+                        <li class="sponsors"><a href="#ex6" rel="modal:open"><img class="img--frame"
+                                    src="images/gabriel.jpg" atl="Gabriel Jewlers"></a></li>
+                        <li class="sponsors"><a href="#ex7" rel="modal:open"><img class="img--frame"
+                                    src="images/rogue.png" atl="Rogue Energy"></a></li>
+                        <li class="sponsors"><a href="#ex8" rel="modal:open"><img class="img--frame"
+                                    src="images/sector-six.png" atl="Sector Six"></a></li>
                     </ul>
                 </div>
 
@@ -66,33 +76,61 @@
         <!-- Modal Content -->
 
         <div id="ex1" class="modal">
-            <a href="http://www.tkqlhce.com/click-9026530-12588435" target="_top">
+            <a href="http://www.tkqlhce.com/click-9026530-12588435" target="_blank">
                 <img class="modal-sponsor" src="http://www.awltovhc.com/image-9026530-12588435" width="728" height="90"
                     alt="" border="0" /></a>
         </div>
 
         <div id="ex2" class="modal">
-            <a href="http://www.kqzyfj.com/click-9026530-12193128" target="_top">
+            <a href="http://www.kqzyfj.com/click-9026530-12193128" target="_blank">
                 <img class="modal-sponsor" src="http://www.tqlkg.com/image-9026530-12193128" width="300" height="250"
                     alt="Kinguin.net - Save on Every Game!" border="0" /></a>
         </div>
 
         <div id="ex3" class="modal">
-            <a href="http://www.kqzyfj.com/click-9026530-12920725" target="_top">
+            <a href="http://www.kqzyfj.com/click-9026530-12920725" target="_blank">
                 <img class="modal-sponsor" src="http://www.lduhtrp.net/image-9026530-12920725" width="300" height="234"
                     alt="HTC Vive" border="0" /></a>
         </div>
 
         <div id="ex4" class="modal">
-            <a href="http://www.kqzyfj.com/click-9026530-13477315" target="_top">
+            <a href="http://www.kqzyfj.com/click-9026530-13477315" target="_blank">
                 <img class="modal-sponsor" src="http://www.awltovhc.com/image-9026530-13477315" width="468" height="60"
                     alt="Online Protection" border="0" /></a>
 
         </div>
 
         <div id="ex5" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
+            <a href="http://www.jdoqocy.com/click-9026530-13499062" target="_blank">
+                <img class="modal-sponsor" src="http://www.awltovhc.com/image-9026530-13499062" width="1200"
+                    height="1200" alt="" border="0" /></a>
+
         </div>
+
+        <div id="ex6" class="modal">
+            <a href="http://www.tkqlhce.com/click-9026530-13464986" target="_blank">
+                <img class="modal-sponsor" src="http://www.ftjcfx.com/image-9026530-13464986" width="500" height="500"
+                    alt="Gabriel & Co. fine jewelry" border="0" /></a>
+
+        </div>
+
+        <div id="ex7" class="modal">
+            <a href="https://rogueenergy.com/" target="_blank">
+                <img class="img--frame" src="images/rogue.png" atl="Rogue Energy">
+                <p>Use Code "Hydracore" For a 10% Discount</p>
+            </a>
+
+        </div>
+
+        <div id="ex8" class="modal">
+            <a href="https://sectorsixapparel.com/" target="_blank">
+                <img class="img--frame" src="images/sector-six.png" atl="Sector Six">
+                <p>Use Code "Hydracore" For a 10% Discount</p>
+            </a>
+
+        </div>
+
+
 
 
 
