--- a/turbulent.html
+++ b/turbulent.html
@@ -31,6 +31,8 @@
                 <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
                 <li><a class="slideout-list-items" href="#">Forum</a></li> -->
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
+                <li><a class="slideout-list-items" href="https://sectorsixapparel.com/collections/hydracore-gaming"
+                        target="_blank">Pro Store</a></li>
             </ul>
             <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
         </div>
@@ -60,16 +62,16 @@
                 </div>
 
                 <div class="skills--card">
-                    <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/kiy.png"
+                    <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/scotty.png"
                             alt="main logo">
-                        <h3 class="headline--tertiary">Kiy.HCG</h3>
+                        <h3 class="headline--tertiary">Scotty2K.HCG</h3>
                     </a>
                     <hr>
                 </div>
                 <div class="skills--card">
-                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/torro.png"
+                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/trenta.png"
                             alt="tranquil logo">
-                        <h3 class="headline--tertiary">Torro.HCG</h3>
+                        <h3 class="headline--tertiary">Trenta.HCG</h3>
                     </a>
                     <hr>
                 </div>
@@ -121,21 +123,36 @@
 
 
         <div id="ex3" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
-            <p>KiY Otherwise known as "Kyle" started siege last year and has been on a non-stop grind to get better. KiY
-                started gaming on ps3 and quit for 2 years. After playing Pubg on pc for 1 year, His friend (Torro.HCG)
-                dragged him into siege during a free weekend and taught Kyle how to play. Kyle started at the end of
-                white noise and has improved greatly and hopes to play pro someday.
-            </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <img class="modal-logo" src="images/scotty-logo.png">
+            <p>Scotty2K.HCG is a 6 year Veteran Infantryman with the United States Army. He has a passion for
+                programming and gaming in general however, his desire to see the Stage in the Pro-Leauge is his drive to
+                become better each and every day. The mottos he strives to live by is "Follow Me" & Acta Non Verba.</p>
+            <ul class="contact-info">
+                <li><a href="https://twitter.com/Scotty2k_HCG" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li>
+                <li><a href=" https://twitch.tv/Underwork" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <!-- <li><a href="https://www.youtube.com/channel/UCvoLmcFLvZGBGNOW9SK5c7w" target="_blank"><img
+                            class="contact-icons" src="images/youtube-icon.png"></a></li> -->
+            </ul>
         </div>
 
         <div id="ex4" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
-            <p>Hey im Torro, I've played R6 for 2 years now. Started on PS4 and now play PC for HydraCore.I used to be
-                really toxic but since joining a team i've learned how to play as a team. Played games since i was 6 and
-                ever since have never gave it up. </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <img class="modal-logo" src="images/trenta-logo.png">
+            <p>Trenta, a Man of Many Talents. A youngling at the mere age of 17 Jeremy “Trenta” McKay is destined to
+                become great at all costs. Starting as a gamer at a very young age has given him the advantage with his
+                first FPS being Quake. Since Quake he has played a multitude of games even trying to go pro in other
+                FPS’s. He believes himself to be the best Doc in the org even if other do not agree. His hope for
+                playing for a org like HydroCoreGaming is to someday play in Challenger League and maybe even Pro
+                League.</p>
+            <ul class="contact-info">
+                <li><a href="https://twitter.com/Trenta_r6" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li>
+                <li><a href="https://www.twitch.tv/trenta_r6" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <li><a href="https://www.instagram.com/trenta.r6/" target="_blank"><img class="contact-icons"
+                            src="images/instagram-icon.png"></a></li>
+            </ul>
         </div>
 
         <div id="ex5" class="modal">
