--- a/tranquil.html
+++ b/tranquil.html
@@ -31,6 +31,8 @@
                 <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
                 <li><a class="slideout-list-items" href="#">Forum</a></li> -->
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
+                <li><a class="slideout-list-items" href="https://sectorsixapparel.com/collections/hydracore-gaming"
+                        target="_blank">Pro Store</a></li>
             </ul>
             <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
         </div>
