--- a/sponsors.html
+++ b/sponsors.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Hydracore Gaming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel=icon href="images/main-logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -125,7 +126,7 @@
         <div id="ex8" class="modal">
             <a href="https://sectorsixapparel.com/" target="_blank">
                 <img class="img--frame" src="images/sector-six.png" atl="Sector Six">
-                <p>Use Code "Hydracore" For a 10% Discount</p>
+                <p>Use Code "Hydracore" For a 5% Discount</p>
             </a>
 
         </div>
