--- a/store.html
+++ b/store.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Hydracore Gaming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel=icon href="images/main-logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -53,71 +54,71 @@
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=597&cid=102534&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/beach-towel.png" alt="naga logo">
                         <h3 class="headline--tertiary">Beach Towel</h3>
+                        <p class="white">$25.00 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=658&cid=102950&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/coffee-mug.png" alt="main logo">
                         <h3 class="headline--tertiary">Coffee Mug</h3>
+                        <p class="white">$10.00 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=636&cid=102607&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/black-socks.png" alt="main logo">
                         <h3 class="headline--tertiary">Black Socks</h3>
+                        <p class="white">$15.00 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=706&cid=103046&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/white-socks.png" alt="tranquil logo">
                         <h3 class="headline--tertiary">White Socks</h3>
+                        <p class="white">$15.00 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=633&cid=102591&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/iphone-case.png" alt="main logo">
                         <h3 class="headline--tertiary">iPhone Case</h3>
+                        <p class="white">$19.99 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=704&cid=103084&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/samsung-case.png" alt="main logo">
                         <h3 class="headline--tertiary">Samsung Case</h3>
+                        <p class="white">$19.99 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=641&cid=102637&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/leggings.png" alt="main logo">
                         <h3 class="headline--tertiary">Leggings</h3>
+                        <p class="white">$30.00 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=585&cid=102425&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/pillow.png" alt="main logo">
                         <h3 class="headline--tertiary">Indoor Pillow</h3>
+                        <p class="white">$20.00 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=624&cid=102380&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/poster.png" alt="main logo">
                         <h3 class="headline--tertiary">Poster</h3>
+                        <p class="white">$18.00 USD</p>
                     </a>
-                    <hr>
                 </div>
                 <div class="skills--card__store">
                     <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=794&cid=103544&sid=front"
                         target="_blank"><img class="img--frame__store" src="images/sticker.png" alt="main logo">
                         <h3 class="headline--tertiary">Die-cut Sticker</h3>
+                        <p class="white">$7.00 USD</p>
                     </a>
-                    <hr>
                 </div>
             </div>
 
